After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729604 - videopostproc: Does not handle dynamic framerate (0/1)
videopostproc: Does not handle dynamic framerate (0/1)
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks: 720305
 
 
Reported: 2014-05-05 22:20 UTC by Nicolas Dufresne (ndufresne)
Modified: 2014-06-19 13:14 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicolas Dufresne (ndufresne) 2014-05-05 22:20:47 UTC
In presence of dynamic framerate stream, the postproc element will cause assert as reported here:

http://gstreamer-devel.966125.n4.nabble.com/vaapidecode-to-xvimagesink-td4664635i20.html#a4666749

(gst-launch-1.0:2262): GStreamer-CRITICAL **: _gst_util_uint64_scale:
assertion 'denom != 0' failed

  • #0 g_logv
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #1 g_log
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #2 _gst_util_uint64_scale
    at gstutils.c line 479
  • #3 gst_vaapipostproc_update_sink_caps
    at gstvaapipostproc.c line 783
  • #4 gst_vaapipostproc_set_caps
    at gstvaapipostproc.c line 1149
  • #5 gst_base_transform_configure_caps
    at gstbasetransform.c line 1031
  • #6 gst_base_transform_setcaps
    at gstbasetransform.c line 1341
  • #7 gst_base_transform_sink_eventfunc
    at gstbasetransform.c line 1860
  • #8 gst_pad_send_event_unchecked
    pad=pad@entry=0x7acdf0, event=event@entry=0x7fffdc009580,
Comment 1 Gwenole Beauchesne 2014-06-19 13:14:33 UTC
commit 9d417815abec6b96b952d162b8eb2a1a2c2b4f4f
Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Date:   Thu Jun 19 13:35:23 2014 +0200

    vaapipostproc: don't crash with dynamic framerate (0/1).
    
    Avoid reaching an assert if dynamic framerates (0/1) are used. One
    way to solve this problem is to just stick field_duration to zero.
    However, this means that, in presence of interlaced streams, the
    very first field will never be displayed if precise presentation
    timestamps are honoured.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729604